--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Recommendation</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js">  
+    </script>  
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js">  
+    </script>  
+    
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css"
+        rel="stylesheet" type="text/css" />  
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
       * {
@@ -125,7 +133,22 @@
             name="movie"
             placeholder="Film that you want to grade"
             type="text"
+            id="tags"
           />
+        
+          <script>
+            $( function() {
+              var availableTags = [
+                  {% for language in movies %}
+                      "{{language}}",
+                  {% endfor %}
+              ];
+              $( "#tags" ).autocomplete({
+                source: availableTags,
+                minLength: 6
+              });
+            } );
+            </script>
           <input
             class="gradeinput"
             name="grade"
